--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ PS4/documents/Murphy Rossi.pdf
 PS6/documents/CallawaySantAnna(2020).pdf
 PS6/documents/Chaisemartin and D'Haultfoeuille (2020).pdf
 PS6/documents/Cheng_Hoekstra.pdf
+PS7/documents/angrist2009.pdf
